[package]
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2018"
name = "telegram-bot"
version = "0.8.0"

description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
readme = "../README.md"
repository = "https://github.com/telegram-rs/telegram-bot"

categories = ["api-bindings", "asynchronous"]
keywords = ["telegram", "bot", "chat", "api"]
license = "MIT"

[features]
default = ["openssl", "http1"]
openssl = ["hyper-tls"]
rustls = ["hyper-rustls"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
[dependencies]
bytes = "1.0"
tokio = {version = "1.0", features = ["fs"]}

multipart = {version = "0.17", default-features = false, features = ["client"]}
tracing = "0.1"
tracing-futures = "0.2"

telegram-bot-raw = {path = "../raw"}

futures = "0.3"
hyper = {version = "0.14", features = ["client"]}
hyper-rustls = {version = "0.22", optional = true}
hyper-tls = {version = "0.5", optional = true}
[dev-dependencies]
tokio = {version = "1.0", features = ["macros", "time", "fs", "rt-multi-thread"]}
tracing-subscriber = "0.2"
