[package]
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2018"
name = "telegram-bot-raw"
version = "0.9.0"

description = "Telegram Bot API types"

documentation = "https://docs.rs/telegram-bot-raw/"
readme = "../README.md"
repository = "https://github.com/telegram-rs/telegram-bot"

categories = ["api-bindings"]
keywords = ["telegram", "bot", "chat", "api"]
license = "MIT"

[dependencies]
bytes = "1.0"
serde = {version = "1", features = ["derive"]}
serde-value = "0.7"
serde_derive = "1"
serde_json = "1"
